version/0.12/_sources/api/solver/_autosummary/settings/playback.rst.txt
:orphan:

.. _playback:

playback
========

.. currentmodule:: ansys.fluent.core.solver.settings_231.playback

.. autoclass:: playback
    :show-inheritance:
    :undoc-members:
.. rubric:: Children

============================================   ===============================================================

Child                                                                                                  Summary

============================================   ===============================================================
:ref:`set_custom_frames <set_custom_frames>`       Set custom frames start, end, skip frames for video export.

:ref:`video <video_1>`                                                                          'video' child.

============================================   ===============================================================

.. rubric:: Commands

========================================   =========================================================================

Command                                                                                                      Summary

========================================   =========================================================================
:ref:`read_animation <read_animation>`                   Read new animation from file or already-defined animations.

:ref:`write_animation <write_animation>`                                       Write animation sequence to the file.

:ref:`stored_view <stored_view>`               Play the 3D animation sequence using the view stored in the sequence.

========================================   =========================================================================

.. rubric:: Included in:

==============================   =======================

Parent                                           Summary

==============================   =======================
:ref:`animations <animations>`       'animations' child.

==============================   =======================

